Configuración de las primeras directivas (mediaItemList), servicios (URL, APIClient), vistas y controladores. Se ha editado el archivo paths, añadiendo las claves url y titles. Se han definido las rutas y los títulos de cada ruta. Creado vista de películas pero falta depurar.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title ng-bind-html="model.title">Babel Renting</title>
+    <title ng-bind-html="model.title">{{::paths.titles.home}}</title>
     <link rel="stylesheet" type="text/css" href="dist/style.css">
 </head>
 
